# NoStaLISA

./: NonStatTools.py  README.md  gap_funcs.py  pyproject.toml  requirements.txt  setup.py  toy_model_modulation_td.ipynb
examples/: README.md  demo.py
nostalisa/: __init__.py  fitting.py  injection.py  test.py
tests/: test_fitting.py  test_injection.py  test_test.py
toy_models/: toy_model_gaps.ipynb  toy_model_modulation_mismodel.ipynb  toy_model_modulation_monte_carlo.ipynb  toy_model_modulation_td.ipynb
